@@ -1,0 +1,11 @@
+package tv.porst.swfretools.parser.actions.as2;
+
+import tv.porst.splib.binaryparser.UINT8;
+
+public class ActionUnknown extends SimpleAction {
+
+	public ActionUnknown(final UINT8 actionCode) {
+		super(actionCode);
+	}
+
+}
